--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,9 @@
 				<button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
 			</form>
             <div class="result">
-                {% if err|length %}
-		    <h2 style="color:#fff;"> Error : {{err}} </h2>
-		{% else %}
+                {% if result|length %}
 		    <img width="250" height="250" src="static/{{ result }}" alt="result">
+            
 		{% endif %}
 	   </div>
 	</div>
